update the banner overflow issue

--- a/css/style.css
+++ b/css/style.css
@@ -324,6 +324,7 @@ h6,
     height: 300px; 
     padding: 15px;
     margin-right: 30px;
+    width: 94%!important;
 }
 
 .screenshot-carousel .laptop-screen {
